さくらのクラウド オブジェクトストレージに画像をアップロードしてみた。

--- a/src/MegamiManager/Views/Shared/_Layout.cshtml
+++ b/src/MegamiManager/Views/Shared/_Layout.cshtml
@@ -34,6 +34,10 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Megamis" asp-action="Index">Megami</a></li>
+                    <li><a asp-area="" asp-controller="Teams" asp-action="Index">Team</a></li>
+                    <li><a asp-area="" asp-controller="MegamiTeams" asp-action="Index">TeamEdit</a></li>
+                    <li><a asp-area="" asp-controller="Images" asp-action="Index">Image</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
