--- a/src/MegamiManager/Views/Megamis/Create.cshtml
+++ b/src/MegamiManager/Views/Megamis/Create.cshtml
@@ -12,66 +12,10 @@
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="AerialMobility" class="col-md-2 control-label"></label>
+            <label asp-for="Type" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="AerialMobility" class="form-control" />
-                <span asp-validation-for="AerialMobility" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="ArmorDefense" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="ArmorDefense" class="form-control" />
-                <span asp-validation-for="ArmorDefense" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Comment" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="CreatedAt" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="CreatedAt" class="form-control" />
-                <span asp-validation-for="CreatedAt" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Description" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Design" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Design" class="form-control" />
-                <span asp-validation-for="Design" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="GroundMobility" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="GroundMobility" class="form-control" />
-                <span asp-validation-for="GroundMobility" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="LongRangeBattle" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="LongRangeBattle" class="form-control" />
-                <span asp-validation-for="LongRangeBattle" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="MediumRangeBattle" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="MediumRangeBattle" class="form-control" />
-                <span asp-validation-for="MediumRangeBattle" class="text-danger" />
+                <input asp-for="Type" class="form-control" />
+                <span asp-validation-for="Type" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
@@ -82,59 +26,94 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="OperationTime" class="col-md-2 control-label"></label>
+            <label asp-for="Design" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="OperationTime" class="form-control" />
-                <span asp-validation-for="OperationTime" class="text-danger" />
+                <input asp-for="Design" class="form-control" />
+                <span asp-validation-for="Design" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="OwnerId" class="col-md-2 control-label"></label>
+            <label asp-for="Description" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="OwnerId" class="form-control" />
-                <span asp-validation-for="OwnerId" class="text-danger" />
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="SearchEnemy" class="col-md-2 control-label"></label>
+            <label asp-for="Comment" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="SearchEnemy" class="form-control" />
-                <span asp-validation-for="SearchEnemy" class="text-danger" />
+                <input asp-for="Comment" class="form-control" />
+                <span asp-validation-for="Comment" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Secret" class="col-md-2 control-label"></label>
+            <label asp-for="CloseRangeBattle" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Secret" class="form-control" />
-                <span asp-validation-for="Secret" class="text-danger" />
+                <input asp-for="CloseRangeBattle" type="number" class="chart-input-params form-control" />
+                <span asp-validation-for="CloseRangeBattle" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="ShortRangeBattle" class="col-md-2 control-label"></label>
+            <label asp-for="MidRangeBattle" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="ShortRangeBattle" class="form-control" />
-                <span asp-validation-for="ShortRangeBattle" class="text-danger" />
+                <input asp-for="MidRangeBattle" type="number" class="chart-input-params form-control" />
+                <span asp-validation-for="MidRangeBattle" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Type" class="col-md-2 control-label"></label>
+            <label asp-for="LongRangeBattle" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Type" class="form-control" />
-                <span asp-validation-for="Type" class="text-danger" />
+                <input asp-for="LongRangeBattle" type="number" class="chart-input-params form-control" />
+                <span asp-validation-for="LongRangeBattle" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="UpdatedAt" class="col-md-2 control-label"></label>
+            <label asp-for="ArmorDefense" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="UpdatedAt" class="form-control" />
-                <span asp-validation-for="UpdatedAt" class="text-danger" />
+                <input asp-for="ArmorDefense" type="number" class="chart-input-params form-control" />
+                <span asp-validation-for="ArmorDefense" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
             <label asp-for="Weight" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Weight" class="form-control" />
+                <input asp-for="Weight" type="number" class="chart-input-params form-control" />
                 <span asp-validation-for="Weight" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="ActiveTime" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="ActiveTime" type="number" class="chart-input-params form-control" />
+                <span asp-validation-for="ActiveTime" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="Stealth" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Stealth" type="number" class="chart-input-params form-control" />
+                <span asp-validation-for="Stealth" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="Recon" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Recon" type="number" class="chart-input-params form-control" />
+                <span asp-validation-for="Recon" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="AerialMobility" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="AerialMobility" type="number" class="chart-input-params form-control" />
+                <span asp-validation-for="AerialMobility" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="GroundMobility" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="GroundMobility" type="number" class="chart-input-params form-control" />
+                <span asp-validation-for="GroundMobility" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
