--- a/src/MegamiManager/Views/Megamis/MyIndex.cshtml
+++ b/src/MegamiManager/Views/Megamis/MyIndex.cshtml
@@ -8,7 +8,6 @@
 
 <p>
     <a asp-action="Create">Create New</a>
-    <a asp-action="MyIndex">My Index</a>
 </p>
 <table class="table">
     <thead>
@@ -45,7 +44,9 @@
                     @Html.DisplayFor(modelItem => item.UpdatedAt)
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.MegamiId">Details</a>
+                    <a asp-action="Edit" asp-route-id="@item.MegamiId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.MegamiId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MegamiId">Delete</a>
                 </td>
             </tr>
         }
