--- a/src/MegamiManager/Views/Teams/Details.cshtml
+++ b/src/MegamiManager/Views/Teams/Details.cshtml
@@ -11,16 +11,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Comment)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Comment)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CreatedAt)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Description)
@@ -29,10 +23,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Comment)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Comment)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.OwnerId)
@@ -41,12 +35,28 @@
             @Html.DisplayFor(model => model.OwnerId)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.CreatedAt)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CreatedAt)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.UpdatedAt)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.UpdatedAt)
         </dd>
     </dl>
+    <h4>Team Members</h4>
+    <hr />
+    <ul>
+        @foreach (var item in Model.Members)
+        {
+            <li>
+                <a asp-controller="Megamis" asp-action="Details" asp-route-id="@item.MegamiId">@item.Megami.Name</a>
+            </li>
+        }
+    </ul>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.TeamId">Edit</a> |
