--- a/src/MegamiManager/Views/Teams/MyIndex.cshtml
+++ b/src/MegamiManager/Views/Teams/MyIndex.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<MegamiManager.Models.MegamiModels.Megami>
+@model IEnumerable<MegamiManager.Models.MegamiModels.Team>
 
 @{
     ViewData["Title"] = "Index";
@@ -8,7 +8,6 @@
 
 <p>
     <a asp-action="Create">Create New</a>
-    <a asp-action="MyIndex">My Index</a>
 </p>
 <table class="table">
     <thead>
@@ -45,7 +44,9 @@
                     @Html.DisplayFor(modelItem => item.UpdatedAt)
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.MegamiId">Details</a>
+                    <a asp-action="Edit" asp-route-id="@item.TeamId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.TeamId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.TeamId">Delete</a>
                 </td>
             </tr>
         }
