--- a/src/MegamiManager/Views/Megamis/AddImage.cshtml
+++ b/src/MegamiManager/Views/Megamis/AddImage.cshtml
@@ -1,18 +1,16 @@
 @model MegamiManager.Models.MegamiModels.Image
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h2>Edit</h2>
+<h2>Create</h2>
 
-<form asp-action="Edit" enctype="multipart/form-data">
+<form asp-action="AddImage" enctype="multipart/form-data">
     <div class="form-horizontal">
         <h4>Image</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="ImageId" />
-        <input type="hidden" asp-for="Timestamp" />
         <div class="form-group">
             <label for="file" class="col-md-2 control-label"></label>
             <div class="col-md-10">
@@ -29,20 +27,20 @@
         <div class="form-group">
             <label asp-for="Description" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
             <label asp-for="Comment" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Comment" class="form-control" />
+                <textarea asp-for="Comment" class="form-control"></textarea>
                 <span asp-validation-for="Comment" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Add" class="btn btn-default" />
             </div>
         </div>
     </div>
