--- a/src/MegamiManager/Views/Megamis/Details.cshtml
+++ b/src/MegamiManager/Views/Megamis/Details.cshtml
@@ -122,6 +122,7 @@
     </form>
 </div>
 @Html.Partial("_Chart.cshtml")
+@Html.Partial("_MegamiImage.cshtml")
 <div>
     <a asp-action="Edit" asp-route-id="@Model.MegamiId">Edit</a> |
     <a asp-action="Index">Back to List</a>
