--- a/src/MegamiManager/Views/Shared/_Layout.cshtml
+++ b/src/MegamiManager/Views/Shared/_Layout.cshtml
@@ -15,6 +15,8 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css" />
     @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
 </head>
 <body>
@@ -36,7 +38,6 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Megamis" asp-action="Index">Megami</a></li>
                     <li><a asp-area="" asp-controller="Teams" asp-action="Index">Team</a></li>
-                    <li><a asp-area="" asp-controller="MegamiTeams" asp-action="Index">TeamEdit</a></li>
                     <li><a asp-area="" asp-controller="Images" asp-action="Index">Image</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
@@ -69,5 +70,42 @@
     </environment>
 
     @RenderSection("scripts", required: false)
+    @*XXX こんなところにあるのはなんか違う*@
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <style>
+        .megami-image-slider img {
+            max-height: 480px;
+            max-width: 100%;
+        }
+
+        .megami-image-nav img {
+            max-height: 120px;
+            max-width: 120px;
+        }
+    </style>
+    <script>
+        $('.megami-image-slider').slick({
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            arrows: false,
+            fade: true,
+            asNavFor: '.megami-image-nav'
+        });
+        $('.megami-image-nav').slick({
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            asNavFor: '.megami-image-slider',
+            dots: true,
+            centerMode: true,
+            focusOnSelect: true
+        });
+    </script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+    <script>
+        $(".markdown").each(function () {
+            var elm = $(this);
+            elm.html(marked(elm.text()));
+        });
+    </script>
 </body>
 </html>
