--- a/src/MegamiManager/Views/Home/About.cshtml
+++ b/src/MegamiManager/Views/Home/About.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<address>
+    <strong>Twitter:</strong> <a href="https://twitter.com/koudenpa">@@koudenpa</a><br />
+    <strong>GitHub:</strong> <a href="https://github.com/7474/megami-manager">megami-manager</a>
+</address>
