--- a/src/MegamiManager/Views/Megamis/AddImage.cshtml
+++ b/src/MegamiManager/Views/Megamis/AddImage.cshtml
@@ -1,15 +1,13 @@
 @model MegamiManager.Models.MegamiModels.Image
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Image";
 }
 
-<h2>Create</h2>
+<h2>Add Image</h2>
 
 <form asp-action="AddImage" enctype="multipart/form-data">
     <div class="form-horizontal">
-        <h4>Image</h4>
-        <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label for="file" class="col-md-2 control-label"></label>
@@ -45,10 +43,6 @@
         </div>
     </div>
 </form>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
