--- a/src/MegamiManager/Views/Megamis/Index.cshtml
+++ b/src/MegamiManager/Views/Megamis/Index.cshtml
@@ -1,53 +1,18 @@
 @model IEnumerable<MegamiManager.Models.MegamiModels.Megami>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Megami Index";
 }
 
-<h2>Index</h2>
+<h2>Megami Index</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-    <a asp-action="MyIndex">My Index</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Owner)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedAt)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedAt)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Owner.NormalizedUserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedAt)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UpdatedAt)
-                </td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@item.MegamiId">Details</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="btn-group" role="group">
+    <a asp-action="MyIndex" class="btn btn-default">My Megami</a>
+    <a asp-action="Create" class="btn btn-default">Create New</a>
+</div>
+
+@*XXX Pagenate*@
+@foreach (var item in Model)
+{
+    @Html.Partial("_MegamiSummary.cshtml", item)
+}
