--- a/src/MegamiManager/Views/Megamis/MyIndex.cshtml
+++ b/src/MegamiManager/Views/Megamis/MyIndex.cshtml
@@ -1,54 +1,16 @@
 @model IEnumerable<MegamiManager.Models.MegamiModels.Megami>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "My Megami";
 }
 
-<h2>Index</h2>
+<h2>My Megami</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Owner)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedAt)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedAt)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Owner.NormalizedUserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedAt)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UpdatedAt)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.MegamiId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.MegamiId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.MegamiId">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="btn-group" role="group">
+    <a asp-action="Create" class="btn btn-default">Create New</a>
+</div>
+
+@foreach (var item in Model)
+{
+    @Html.Partial("_MegamiSummary.cshtml", item)
+}
