--- a/src/MegamiManager/Views/Teams/Delete.cshtml
+++ b/src/MegamiManager/Views/Teams/Delete.cshtml
@@ -1,15 +1,12 @@
 @model MegamiManager.Models.MegamiModels.Team
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Team";
 }
 
-<h2>Delete</h2>
+<h2>Delete Team</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Team</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -21,8 +18,12 @@
     
     <form asp-action="Delete">
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Delete" class="btn btn-danger" />
         </div>
     </form>
+</div>
+
+<div class="btn-group" role="group">
+    <a asp-action="MyIndex" class="btn btn-default">My Team</a>
+    <a asp-action="Index" class="btn btn-default">Back to List</a>
 </div>
