--- a/src/MegamiManager/Views/Teams/Index.cshtml
+++ b/src/MegamiManager/Views/Teams/Index.cshtml
@@ -6,48 +6,12 @@
 
 <h2>Index</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-    <a asp-action="MyIndex">My Index</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Owner)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedAt)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedAt)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Owner.NormalizedUserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedAt)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UpdatedAt)
-                </td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@item.TeamId">Details</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="btn-group" role="group">
+    <a asp-action="MyIndex" class="btn btn-default">My Team</a>
+    <a asp-action="Create" class="btn btn-default">Create New</a>
+</div>
+
+@foreach (var item in Model)
+{
+    @Html.Partial("_TeamSummary.cshtml", item)
+}
