--- a/src/MegamiManager/wwwroot/css/site.css
+++ b/src/MegamiManager/wwwroot/css/site.css
@@ -25,26 +25,39 @@ textarea {
 
 /* buttons and links extension to use brackets: [ click me ] */
 .btn-bracketed::before {
-    display:inline-block;
+    display: inline-block;
     content: "[";
     padding-right: 0.5em;
 }
+
 .btn-bracketed::after {
-    display:inline-block;
+    display: inline-block;
     content: "]";
     padding-left: 0.5em;
 }
 
 /* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"]
-{
+.carousel-inner .item img[src$=".svg"] {
     width: 100%;
 }
 
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
-  /* Hide captions */
-  .carousel-caption {
-    display: none
-  }
+    /* Hide captions */
+    .carousel-caption {
+        display: none;
+    }
+}
+
+.megami-detail-wrapper {
+    margin-top: 1em;
+}
+
+.megami-thumbnail {
+    max-width: 160px;
+    max-height: 160px;
+}
+
+.team-detail-wrapper {
+    margin-top: 1em;
 }
