#5 ローカルマシンでTwitterログインが1パス通った。

--- a/src/MegamiManager/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/src/MegamiManager/Views/Account/ExternalLoginConfirmation.cshtml
@@ -17,6 +17,13 @@
         logging in.
     </p>
     <div class="form-group">
+        <label asp-for="NickName" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="NickName" class="form-control" />
+            <span asp-validation-for="NickName" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
         <label asp-for="Email" class="col-md-2 control-label"></label>
         <div class="col-md-10">
             <input asp-for="Email" class="form-control" />
