--- a/src/MegamiManager/Views/Account/Register.cshtml
+++ b/src/MegamiManager/Views/Account/Register.cshtml
@@ -10,10 +10,10 @@
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="UserName" class="col-md-2 control-label"></label>
+        <label asp-for="NickName" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            <input asp-for="UserName" class="form-control" />
-            <span asp-validation-for="UserName" class="text-danger"></span>
+            <input asp-for="NickName" class="form-control" />
+            <span asp-validation-for="NickName" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
