--- a/src/MegamiManager/Views/Manage/Index.cshtml
+++ b/src/MegamiManager/Views/Manage/Index.cshtml
@@ -10,6 +10,10 @@
     <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>Profile:</dt>
+        <dd>
+            <a asp-controller="Manage" asp-action="ChangeProfile" class="btn-bracketed">Change</a>
+        </dd>
         <dt>Password:</dt>
         <dd>
             @if (Model.HasPassword)
